working on forms

--- a/README
+++ b/README
@@ -3,7 +3,7 @@ Start Web App Command: startup command: python pardonmypicks.py
 **Video Checklist**
 [X] Video 1
 [X] Video 2
-[] Video 3 -> Paused at 9 minutes!
+[] Video 3 -> at 22:35
 [] Video 4
 [] Video 5
 [] Video 6
